--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -67,6 +67,18 @@
             <div class="gallery-item">
                 <img src="../assets/img/gallery/photo16.webp" alt="Memory 16" />
             </div>
+            <div class="gallery-item">
+                <img src="../assets/img/gallery/photo17.webp" alt="Memory 17" />
+            </div>
+            <div class="gallery-item">
+                <img src="../assets/img/gallery/photo18.webp" alt="Memory 18" />
+            </div>
+            <div class="gallery-item">
+                <img src="../assets/img/gallery/photo19.webp" alt="Memory 19" />
+            </div>
+            <div class="gallery-item">
+                <img src="../assets/img/gallery/photo20.webp" alt="Memory 20" />
+            </div>
         </div>
     </div>
 
